# rust-jira-client

./: .gitignore  .taurignore  Cargo.toml  README.md
.openapi-generator/: FILES
docs/: AnnouncementBannerApi.md  AppDataPoliciesApi.md  ApplicationRolesApi.md  AuditRecordsApi.md  AvatarsApi.md  BulkFetchIssueRequestBean.md  ClassificationLevelsApi.md  Comment.md  CreateProjectDetails.md  DashboardsApi.md  Fields.md  Filter.md  FilterDetails.md  FilterSharingApi.md  FiltersApi.md  GroupAndUserPickerApi.md  GroupsApi.md  IssueAttachmentsApi.md  IssueCommentPropertiesApi.md  IssueCommentsApi.md  IssueCustomFieldConfigurationAppsApi.md  IssueCustomFieldContextsApi.md  IssueCustomFieldOptionsApi.md  IssueCustomFieldOptionsAppsApi.md  IssueCustomFieldValuesAppsApi.md  IssueFieldConfigurationsApi.md  IssueFieldsApi.md  IssueLinkType.md  IssueLinkTypesApi.md  IssueLinksApi.md  IssueNavigatorSettingsApi.md  IssueNotificationSchemesApi.md  IssuePrioritiesApi.md  IssuePropertiesApi.md  IssueRemoteLinksApi.md  IssueResolutionsApi.md  IssueSearchApi.md  IssueSecurityLevelApi.md  IssueSecuritySchemesApi.md  IssueTypePropertiesApi.md  (+61 more)
frontend/: TODOS.md  package-lock.json  package.json
jira-client/: Cargo.toml
jira-client/src/: error.rs  lib.rs
jira_api_client/: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  build.rs
jira_api_client/src/: main.rs
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/apis/: announcement_banner_api.rs  app_data_policies_api.rs  app_migration_api.rs  app_properties_api.rs  application_roles_api.rs  audit_records_api.rs  avatars_api.rs  classification_levels_api.rs  configuration.rs  dashboards_api.rs  dynamic_modules_api.rs  filter_sharing_api.rs  filters_api.rs  group_and_user_picker_api.rs  groups_api.rs  issue_attachments_api.rs  issue_comment_properties_api.rs  issue_comments_api.rs  issue_custom_field_configuration_apps_api.rs  issue_custom_field_contexts_api.rs  issue_custom_field_options_api.rs  issue_custom_field_options_apps_api.rs  issue_custom_field_values_apps_api.rs  issue_field_configurations_api.rs  issue_fields_api.rs  issue_link_types_api.rs  issue_links_api.rs  issue_navigator_settings_api.rs  issue_notification_schemes_api.rs  issue_priorities_api.rs  issue_properties_api.rs  (+61 more)
(+740 files in other folders)
