[package]
name = "openapi"
version = "1001.0.0-SNAPSHOT-e098eec8c0925855876f3d946f20a4b01cd69e3c"
authors = ["ecosystem@atlassian.com"]
description = "Jira Cloud platform REST API documentation"
license = "Apache 2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
tokio = { version = "1.41.0", features = ["full"] }
